# InterviewPrep-Backend

./: .gitignore  API_DOCS.md  API_DOCUMENTATION.md  ENTRY_POINTS.md  MIGRATION_SUMMARY.md  README.md  SIMPLE_API_GUIDE.md  VERCEL_DEPLOYMENT.md  app.py  pyproject.toml  railway.json  requirements.txt  vercel.json
api/: index.py
app/: config.py  main.py  schemas.py
app/routers/: interview.py
app/services/: analytics.py  aws_providers.py  deepseek.py  session_store.py  state_machine.py
data/: rules.json
src/interview_prep_backend/: config.py  main.py  schemas.py
src/interview_prep_backend/routers/: interview.py
src/interview_prep_backend/services/: analytics.py  aws_providers.py  deepseek.py  session_store.py  state_machine.py
tests/: interview.webm  send_video_test.py  test_analytics.py  test_state_machine.py
