[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview-prep-backend"
version = "0.1.0"
description = "FastAPI backend for a browser-based virtual interview coach"
readme = "README.md"
authors = [{name = "Interview Coach", email = "noreply@example.com"}]
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<0.28.0",
  "pydantic>=2.7.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "boto3>=1.40.45",
  "python-multipart>=0.0.20",
  "pydantic-settings>=2.11.0",
  "openai>=1.0.0,<2.0.0",
  "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0"
]

aws = [
  "boto3>=1.34.0,<2.0.0"
]

[project.urls]
"Source" = "https://github.com/example/interview-prep-backend"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_prep_backend"]

[tool.hatch.build.targets.sdist]
include = ["src/interview_prep_backend", "pyproject.toml", "README.md", "data"]
